# StellarCert

./: CONTRIBUTING.md
.github/workflows/: contracts.yml
backend/: .env.example  package.json  tsconfig.json
backend/src/common/guards/: rate-limit.guard.ts
backend/src/common/rate-limiting/: rate-limit.service.ts
backend/src/config/: environment.config.ts
backend/src/modules/certificate/: certificate.controller.ts  certificate.service.ts
backend/src/modules/certificate/entities/: certificate.entity.ts
backend/src/modules/files/services/: storage.service.ts
backend/src/modules/issuers/entities/: issuer.entity.ts
backend/src/modules/multisig/: multisig.service.ts
backend/src/modules/users/: users.service.ts
frontend/: lint-report.json  package.json  vitest.config.ts
frontend/src/api/: endpoints.ts  types.ts
frontend/src/components/: CertificateTable.tsx
frontend/src/components/admin/users/: UserManagement.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: CertificateWallet.tsx  Login.tsx  Verify.tsx
frontend/src/pages/__tests__/: IssuerProfile.test.tsx
stellar-contracts/: Cargo.toml  deny.toml
stellar-contracts/src/: admin_multisig.rs  crl.rs  lib.rs  storage.rs  storage_helpers.rs
